Fix a bug with bottom logo alignment in FF.

--- a/lms/static/sass/lms-main.scss
+++ b/lms/static/sass/lms-main.scss
@@ -107,6 +107,10 @@ header.global {
     width: 28%;
     text-align: right;
 
+    p {
+      text-align: right;
+    }
+
     .link-iblstudios {
       font-size: 12px;
       color: #acacac !important;
